[gd_scene load_steps=5 format=3 uid="uid://cxcqc2u4kst2b"]

[ext_resource type="Script" path="res://items/sword_pickup/sword_pickup.gd" id="1_e1o68"]
[ext_resource type="Texture2D" uid="uid://csji453xk2a0c" path="res://stuff.png" id="2_q2rnq"]
[ext_resource type="AudioStream" uid="uid://ul7vyxcwsyas" path="res://sounds/item pickup[.wav" id="3_6mm47"]

[sub_resource type="CircleShape2D" id="CircleShape2D_x0gqo"]
radius = 8.0

[node name="SwordPickup" type="Area2D"]
collision_layer = 0
collision_mask = 2
monitorable = false
script = ExtResource("1_e1o68")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_q2rnq")
region_enabled = true
region_rect = Rect2(32, 0, 16, 16)

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_x0gqo")

[node name="Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_6mm47")
volume_db = 10.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="finished" from="Sound" to="." method="_on_sound_finished"]
